Change argss to flags as not to conflict with GitHub Action syntax

--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
       Default is github-pr-check.
       github-pr-review can use Markdown and add a link to rule page in reviewdog reports.
     default: 'github-pr-check'
-  args:
+  flags:
     description: |
       List of arguments to send to tflint
       For the output to be parsable by reviewdog --format=checkstyle is enforced
@@ -28,7 +28,7 @@ runs:
     - ${{ inputs.github_token }}
     - ${{ inputs.level }}
     - ${{ inputs.reporter }}
-    - ${{ inputs.args }}
+    - ${{ inputs.flags }}
 branding:
   icon: 'edit'
   color: 'gray-dark'
