--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-check
+          directory: testdata
 
   test-pr-check:
     if: github.event_name == 'pull_request'
@@ -31,6 +32,7 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-check
+          directory: testdata
 
   test-pr-review:
     if: github.event_name == 'pull_request'
@@ -44,3 +46,4 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
+          directory: testdata
