Consistency: working-directory

--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,7 @@ inputs:
       Reporter of reviewdog command [github-pr-check,github-pr-review].
       Default is github-pr-check.
     default: 'github-pr-check'
-  directory:
+  working-directory:
     description: |
       Directory to run the action on, from the repo root.
       Default is . ( root of the repository)
