--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,10 @@ jobs:
           github_token: ${{ secrets.github_token }}
           reporter: github-check
           working_directory: testdata
+      
+      - name: Dump steps context
+        env:
+          STEPS_CONTEXT: ${{ toJson(steps) }}
 
       # The check is expected to fail on the test data
       - name: Check return codes
