--- a/action.yml
+++ b/action.yml
@@ -14,12 +14,24 @@ inputs:
       Reporter of reviewdog command [github-pr-check,github-pr-review].
       Default is github-pr-check.
     default: 'github-pr-check'
+  working_directory:
+    description: |
+      Directory to run the action on, from the repo root.
+      Default is . ( root of the repository)
+    default: '.'
   flags:
     description: |
       List of arguments to send to tflint
       For the output to be parsable by reviewdog --format=checkstyle is enforced
       Default is --module.
     default: '--module'
+
+outputs:
+  tflint-return-code:
+    description: 'tflint command return code'
+  reviewdog-return-code:
+    description: 'reviewdog command return code'
+
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -28,6 +40,7 @@ runs:
     - ${{ inputs.level }}
     - ${{ inputs.reporter }}
     - ${{ inputs.flags }}
+
 branding:
   icon: 'edit'
   color: 'gray-dark'
