--- a/action.yml
+++ b/action.yml
@@ -40,6 +40,7 @@ runs:
     - ${{ inputs.level }}
     - ${{ inputs.reporter }}
     - ${{ inputs.flags }}
+    - ${{ inputs.working_directory }}
 
 branding:
   icon: 'edit'
