--- a/action.yml
+++ b/action.yml
@@ -51,9 +51,10 @@ runs:
       id: tflint
       shell: bash
       env:
-        # We may want to allow specifying reviewdog and golangci-lint version as
-        # action's input, but let's start with hard coded latest stable version.
-        REVIEWDOG_VERSION: v0.10.2
+        # We may want to allow specifying reviewdog and tflint version as
+        # action's input, but let's start with hard coded latest stable version for reviewdog
+        # and latest release for tflint
+        REVIEWDOG_VERSION: v0.11.0
         # INPUT_<VARIABLE_NAME> is not available in Composite run steps
         # https://github.community/t/input-variable-name-is-not-available-in-composite-run-steps/127611
         INPUT_GITHUB_TOKEN: ${{ inputs.github_token }}
