--- a/.github/workflows/test_module.yml
+++ b/.github/workflows/test_module.yml
@@ -11,12 +11,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: hashicorp/setup-terraform@v1
 
-      - uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.12.24
-          tf_actions_subcommand: init
-          tf_actions_working_dir: testdata_module
+      - run: terraform init
+        working-directory: testdata_module
 
       - uses: ./
         continue-on-error: true
