--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,10 @@ on:
       - master
   pull_request:
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   test-check:
     name: tflint (github-check)
@@ -30,14 +34,14 @@ jobs:
           tflint_return="${{ steps.test.outputs.tflint-return-code }}"
           reviewdog_return="${{ steps.test.outputs.reviewdog-return-code }}"
 
-          if [ "$tflint_return" -eq 3 ]; then
+          if [[ "$tflint_return" -eq 3 ]]; then
             echo "tflint correctly returned failure ${tflint_return}"
           else
             echo "tflint returned ${tflint_return}, expected '3'. Failing..."
             exit 1
           fi
 
-          if [ "$reviewdog_return" -eq 0 ]; then
+          if [[ "$reviewdog_return" -eq 0 ]]; then
             echo "reviewdog correctly returned success: ${reviewdog_return}"
           else
             echo "reviewdog returned ${reviewdog_return}, expected '0'. Failing..."
@@ -68,7 +72,7 @@ jobs:
           tflint_return="${{ steps.test.outputs.tflint-return-code }}"
           reviewdog_return="${{ steps.test.outputs.reviewdog-return-code }}"
 
-          if [ "$tflint_return" -eq 3 ]; then
+          if [[ "$tflint_return" -eq 3 ]]; then
             echo "tflint correctly returned failure ${tflint_return}"
           else
             echo "tflint returned ${tflint_return}, expected '3'. Failing..."
@@ -108,7 +112,7 @@ jobs:
           tflint_return="${{ steps.test.outputs.tflint-return-code }}"
           reviewdog_return="${{ steps.test.outputs.reviewdog-return-code }}"
 
-          if [ "$tflint_return" -eq 3 ]; then
+          if [[ "$tflint_return" -eq 3 ]]; then
             echo "tflint correctly returned failure ${tflint_return}"
           else
             echo "tflint returned ${tflint_return}, expected '3'. Failing..."
@@ -146,14 +150,14 @@ jobs:
           tflint_return="${{ steps.test.outputs.tflint-return-code }}"
           reviewdog_return="${{ steps.test.outputs.reviewdog-return-code }}"
 
-          if [ "$tflint_return" -eq 3 ]; then
+          if [[ "$tflint_return" -eq 3 ]]; then
             echo "tflint correctly returned failure ${tflint_return}"
           else
             echo "tflint returned ${tflint_return}, expected '3'. Failing..."
             exit 1
           fi
 
-          if [ "$reviewdog_return" -eq 0 ]; then
+          if [[ "$reviewdog_return" -eq 0 ]]; then
             echo "reviewdog correctly returned success: ${reviewdog_return}"
           else
             echo "reviewdog returned ${reviewdog_return}, expected '0'. Failing..."
@@ -188,12 +192,88 @@ jobs:
         run: |
           tflint_return="${{ steps.test.outputs.tflint-return-code }}"
           reviewdog_return="${{ steps.test.outputs.reviewdog-return-code }}"
-          if [ "$tflint_return" -eq 3 ]; then
+          if [[ "$tflint_return" -eq 3 ]]; then
             echo "tflint correctly returned failure ${tflint_return}"
           else
             echo "tflint returned ${tflint_return}, expected '3'. Failing..."
             exit 1
           fi
+          if [[ "$reviewdog_return" -eq 0 ]]; then
+            echo "reviewdog correctly returned success: ${reviewdog_return}"
+          else
+            echo "reviewdog returned ${reviewdog_return}, expected '0'. Failing..."
+            exit 1
+          fi
+
+  test-windows:
+    if: github.event_name == 'pull_request'
+    name: tflint (windows)
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: ./
+        continue-on-error: true
+        id: test
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-check
+          level: info
+          working_directory: tests/reviewdog-reporters
+
+      # The check is expected to fail on the test data
+      - name: Check return codes
+        if: success() || failure ()
+        run: |
+          tflint_return="${{ steps.test.outputs.tflint-return-code }}"
+          reviewdog_return="${{ steps.test.outputs.reviewdog-return-code }}"
+
+          if [[ "$tflint_return" -eq 3 ]]; then
+            echo "tflint correctly returned failure ${tflint_return}"
+          else
+            echo "tflint returned ${tflint_return}, expected '3'. Failing..."
+            exit 1
+          fi
+
+          if [ "$reviewdog_return" -eq 0 ]; then
+            echo "reviewdog correctly returned success: ${reviewdog_return}"
+          else
+            echo "reviewdog returned ${reviewdog_return}, expected '0'. Failing..."
+            exit 1
+          fi
+
+  test-macos:
+    if: github.event_name == 'pull_request'
+    name: tflint (macos)
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: ./
+        continue-on-error: true
+        id: test
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-check
+          level: info
+          working_directory: tests/reviewdog-reporters
+
+      # The check is expected to fail on the test data
+      - name: Check return codes
+        if: success() || failure ()
+        run: |
+          tflint_return="${{ steps.test.outputs.tflint-return-code }}"
+          reviewdog_return="${{ steps.test.outputs.reviewdog-return-code }}"
+
+          if [[ "$tflint_return" -eq 3 ]]; then
+            echo "tflint correctly returned failure ${tflint_return}"
+          else
+            echo "tflint returned ${tflint_return}, expected '3'. Failing..."
+            exit 1
+          fi
+
           if [ "$reviewdog_return" -eq 0 ]; then
             echo "reviewdog correctly returned success: ${reviewdog_return}"
           else
