Use matrix for OS tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -205,48 +205,13 @@ jobs:
             exit 1
           fi
 
-  test-windows:
+  test-operating-systems:
     if: github.event_name == 'pull_request'
-    name: tflint (windows)
-    runs-on: windows-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: ./
-        continue-on-error: true
-        id: test
-        with:
-          github_token: ${{ secrets.github_token }}
-          reporter: github-pr-check
-          level: info
-          working_directory: tests/reviewdog-reporters
-
-      # The check is expected to fail on the test data
-      - name: Check return codes
-        if: success() || failure ()
-        run: |
-          tflint_return="${{ steps.test.outputs.tflint-return-code }}"
-          reviewdog_return="${{ steps.test.outputs.reviewdog-return-code }}"
-
-          if [[ "$tflint_return" -eq 3 ]]; then
-            echo "tflint correctly returned failure ${tflint_return}"
-          else
-            echo "tflint returned ${tflint_return}, expected '3'. Failing..."
-            exit 1
-          fi
-
-          if [ "$reviewdog_return" -eq 0 ]; then
-            echo "reviewdog correctly returned success: ${reviewdog_return}"
-          else
-            echo "reviewdog returned ${reviewdog_return}, expected '0'. Failing..."
-            exit 1
-          fi
-
-  test-macos:
-    if: github.event_name == 'pull_request'
-    name: tflint (macos)
-    runs-on: macos-latest
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+    name: tflint (${{ matrix.platform }})
+    runs-on: ${{ matrix.platform }}
 
     steps:
       - uses: actions/checkout@v2
