Extra TFLINT_PLUGIN_DIR` docs, Action Description

--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ inputs:
     default: 'latest'
   tflint_rulesets:
     description: |
-      Space separated, official (from the terraform-linters GitHub organization) tflint rulesets to install and use.
+      Space separated, official (from the terraform-linters GitHub organization) tflint rulesets to install and use. If a pre-configured `TFLINT_PLUGIN_DIR` is set, rulesets are installed in that directory.
       Default is empty.
     default: ''
   flags:
