Add support for optional tflint rulesets (Azure, GCP) (#35)
* Install custom rulesets for tflint

* Cleanup tests for clarity

* Docs: only official rulesets are supported

* Allow for external ruleset installation

* Remove empty line

* Remove unused Hadolint job

* Add Windows and ARM support

* Shellcheck and style cleanups

* Fail fast on errors

* Whitespace cleanup

* Use matrix for OS tests

* Use action-local version of reviewdog and tflint

* Add `TFLINT_PLUGIN_DIR` extra docs

* Extra TFLINT_PLUGIN_DIR` docs, Action Description

--- a/action.yml
+++ b/action.yml
@@ -34,6 +34,11 @@ inputs:
       The tflint version to install and use.
       Default is to use the latest release version.
     default: 'latest'
+  tflint_rulesets:
+    description: |
+      Space separated, official (from the terraform-linters GitHub organization) tflint rulesets to install and use. If a pre-configured `TFLINT_PLUGIN_DIR` is set, rulesets are installed in that directory.
+      Default is empty.
+    default: ''
   flags:
     description: |
       List of arguments to send to tflint
@@ -68,6 +73,7 @@ runs:
         INPUT_FAIL_ON_ERROR: ${{ inputs.fail_on_error }}
         INPUT_WORKING_DIRECTORY: ${{ inputs.working_directory }}
         INPUT_TFLINT_VERSION: ${{ inputs.tflint_version }}
+        INPUT_TFLINT_RULESETS: ${{ inputs.tflint_rulesets }}
         INPUT_FLAGS: ${{ inputs.flags }}
 
 branding:
