--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: reviewdog
+name: Lint
 
 on:
   push:
@@ -7,8 +7,7 @@ on:
   pull_request:
 
 jobs:
-  shellcheck:
-    name: runner / shellcheck
+  Shellcheck:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,28 +26,7 @@ jobs:
           reporter: ${{ steps.reporter.outputs.value }}
           level: warning
 
-  hadolint:
-    name: runner / hadolint
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: haya14busa/action-cond@v1
-        id: reporter
-        with:
-          cond: ${{ github.event_name == 'pull_request' }}
-          if_true: "github-pr-review"
-          if_false: "github-check"
-
-      - uses: reviewdog/action-hadolint@v1
-        with:
-          github_token: ${{ secrets.github_token }}
-          reporter: ${{ steps.reporter.outputs.value }}
-          level: warning
-
-  misspell:
-    name: runner / misspell
+  Misspell:
     runs-on: ubuntu-latest
 
     steps:
