--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -164,6 +164,47 @@ jobs:
             exit 1
           fi
 
+  test-init:
+    if: github.event_name == 'pull_request'
+    name: tflint (init)
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: hashicorp/setup-terraform@v1
+
+      - run: terraform init
+        working-directory: tests/init
+
+      - uses: ./
+        continue-on-error: true
+        id: test
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-check
+          level: info
+          tflint_init: true
+          working_directory: tests/init
+
+      # The check is expected to fail on the test data
+      - name: Check return codes
+        if: success() || failure ()
+        run: |
+          tflint_return="${{ steps.test.outputs.tflint-return-code }}"
+          reviewdog_return="${{ steps.test.outputs.reviewdog-return-code }}"
+          if [[ "$tflint_return" -eq 2 ]]; then
+            echo "tflint correctly returned failure ${tflint_return}"
+          else
+            echo "tflint returned ${tflint_return}, expected '2'. Failing..."
+            exit 1
+          fi
+          if [[ "$reviewdog_return" -eq 0 ]]; then
+            echo "reviewdog correctly returned success: ${reviewdog_return}"
+          else
+            echo "reviewdog returned ${reviewdog_return}, expected '0'. Failing..."
+            exit 1
+          fi
+
   test-modules:
     if: github.event_name == 'pull_request'
     name: tflint (modules)
