take github_token from `github.token` by default

--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,7 @@ inputs:
   github_token:
     description: 'GITHUB_TOKEN'
     required: true
+    default: ${{ github.token }}
   level:
     description: 'Report level for reviewdog [info,warning,error]'
     default: 'error'
