--- a/.github/workflows/depup.yml
+++ b/.github/workflows/depup.yml
@@ -5,6 +5,7 @@ on:
     - cron:  '14 14 * * *' # Runs at 14:14 UTC every day
   repository_dispatch:
     types: [depup]
+  workflow_dispatch:
 
 jobs:
   reviewdog:
