--- a/.github/workflows/depup.yml
+++ b/.github/workflows/depup.yml
@@ -11,8 +11,8 @@ jobs:
   reviewdog:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: reviewdog/action-depup/with-pr@v1
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: reviewdog/action-depup/with-pr@d6b40096afad49ca676145faaba7190df29a9807 # v1.6.3
         with:
           file: action.yml
           version_name: REVIEWDOG_VERSION
@@ -22,8 +22,8 @@ jobs:
   tflint-ruleset-azurerm:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: reviewdog/action-depup/with-pr@v1
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: reviewdog/action-depup/with-pr@d6b40096afad49ca676145faaba7190df29a9807 # v1.6.3
         with:
           file: tests/init/.tflint.hcl
           version_name: version
