--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -18,6 +18,6 @@ jobs:
         uses: actions/checkout@master
 
       - name: Manage labels
-        uses: lannonbr/issue-label-manager-action@4.0.0
+        uses: lannonbr/issue-label-manager-action@e8dbcd8198e86a1e98d5372e55db976fed9ba6f7 # 4.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
